8218880: G1 crashes when issuing a periodic GC while the GCLocker is held

Do not wait for the GC locker in the periodic GC thread as the GC locker being held is an indication for being busy anyway.

Reviewed-by: kbarrett, shade